# xi640-usbx-uvc

./: .gitignore  CLAUDE.md  README.md  west.yml
.claude/agents/: architect.md  phase-tracker.md  reviewer.md  tdd.md  tech-lead-reviewer.md
.claude/skills/code-review-embedded/: SKILL.md
.claude/skills/hw-feedback-loop/: SKILL.md
.claude/skills/tdd-embedded/: SKILL.md
.claude/skills/zephyr-stm32-coding/: SKILL.md
app/: .gitignore  CMakeLists.txt  Kconfig  app.overlay  diag_swgen.conf  prj.conf  west.yml
app/boards/: stm32n6570_dk_stm32n657xx_fsbl.overlay
app/docs/: Xi640_USBX_Hybrid_Architecture.md  Xi640_USBX_Hybrid_Masterplan.docx  architecture.md  memory_layout.md  option1_iso_uvc_plan.md  phase1_fork_baseline_prompt.md  phase4_dcd_analysis.md  phase_status.md  st_reference_analysis.md  usb_dma_cache_rules.md  usbx_standalone_setup_flow.md
app/docs/plans/: 2026-03-27-dcmipp-uvc-integration.md
app/inc/: usb_desc.h  usb_desc_internal.h  usbx.h  usbx_codes.h  usbx_conf.h  xi640_dcd.h  xi640_hid.h  xi640_st_test.h  xi640_uvc_descriptors.h  xi640_uvc_stream.h
app/sections/: dcmipp_buf.ld
app/src/: atto640d_video_stub.c  dcmipp_capture.c  dcmipp_capture.h  lynred_atto640d.c  lynred_atto640d.h  main.c  usb_desc.c  usbd_uvc_iso.c  usbx_zephyr.c  xi640_dcd.c  xi640_hid.c  xi640_st_test.c  xi640_uvc_descriptors.c  xi640_uvc_stream.c
app/tests/: CMakeLists.txt  test_xi640_dcd.c
app/usbx_zephyr_port/: CMakeLists.txt
app/usbx_zephyr_port/inc/: ux_port.h  ux_stm32_config.h
app/usbx_zephyr_port/src/: ux_dcd_stm32_callback.c  ux_dcd_stm32_transfer_run.c  ux_port.c
app/zephyr-patches/: 0001-usbd_init-two-pass-class-init-before-ep-assignment.patch  0002-usbd_ch9-composite-cfg-desc-hexdump-debug.patch  0003-sample_usbd_init-hid-after-uvc-registration.patch  README.md
docs/: architecture.md  usb_dma_cache_rules.md
modules/usbx_zephyr_port/: CMakeLists.txt  Kconfig
modules/usbx_zephyr_port/include/: ux_port.h
modules/usbx_zephyr_port/src/: ux_port.c
